# USBGadget

./: LICENSE  README.md  example.py  pyproject.toml
usb_gadget/: __init__.py  hid_gadget.py  usb_gadget.py
