[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usb_gadget"
version = "0.1"
authors = [
  { name="Frederic98"},
]
description = "A python library for creating and interfacing with USB Gadgets on Linux through libcomposite"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Frederic98/USBGadget"
"Bug Tracker" = "https://github.com/Frederic98/USBGadget/issues"
